# ocaml-poker

./: dune-project  ocaml_poker.opam
lib/: card.ml  cardsummary.ml  deck.ml  dune  hand.ml  rank.ml  suit.ml
test/: dune  test_hand_freqs.ml
